# GuardFlow_v1

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  FRONTEND_URLS_UPDATED.md  LOCAL_DB_FIX.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  RENDER_KEEP_ALIVE_FIX.md  RETRO_DESIGN_GUIDE.md  SDK_RELEASE_SUMMARY.md  SOLUTION.md  TAILWIND_V4_FIX.md  audit_sdk.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  rebuild-fast.sh  rebuild.sh  render.yaml  setup-dashboard.sh  test-auth.sh  test-project-traffic.sh
SDK/: .pypirc.template  BUILD.md  CHANGELOG.md  FIXES_APPLIED.md  INSTALL_BUILD_TOOLS.md  LICENSE  MANIFEST.in  Makefile  PRE_RELEASE_CHECKLIST.md  README.md  READY_TO_RELEASE.md  RELEASE_GUIDE.md  build_and_upload.sh  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  setup.py  test_sdk.py
SDK/guardflow/: __init__.py  fingerprint.py  limiter.py  middleware.py  reporter.py  scrubber.py
SDK/sdk-env/: pyvenv.cfg
SDK/test-deployment/: Dockerfile  docker-compose.test.yml  requirements.txt  test.sh  test_app.py
studio/: AUTHENTICATION_GUIDE.md
studio/backend/: .dockerignore  .env.example  API_ENDPOINTS.md  AUTH_SETUP.md  Dockerfile  Dockerfile.prod  KEEP_ALIVE.md  alembic.ini  render-build.sh  render-start.sh  requirements.txt
studio/backend/app/: main.py
studio/backend/app/api/: __init__.py  auth.py  projects.py  telemetry.py  users.py
studio/backend/app/core/: auth.py  db.py  security.py
studio/backend/app/models/: __init__.py  global_blacklist.py  project.py  threat_log.py  user.py
studio/backend/app/schemas/: __init__.py  base.py  project.py  threat_log.py  user.py
studio/backend/app/services/: project.py  user.py
studio/backend/migrations/: env.py
studio/backend/migrations/versions/: 257a20b7c5c0_initial_setup_with_uuid.py  34dcaed7cb3c_initial_model_setup.py  5c4fd9e5a6b1_add_risk_factors_and_metadata_to_threat_logs.py  6d21a2ef6a77_add_global_blacklist_table.py  7b8f3a41c2d9_add_project_controls_and_user_profile_fields.py  929eee5211b2_add_country_field_with_default.py  a9c4f5d2e7b1_add_google_oauth_fields_to_users.py  ed8ae7166486_add_timezone_to_timestamps.py
studio/frontend/: .dockerignore  .vercelignore  Dockerfile  Dockerfile.prod  Dockerfile.simple  IMPLEMENTATION.md  VERCEL_DEPLOYMENT.md  dev-entrypoint.sh  next.config.js  next.config.ts  package-lock.json  package.json  vercel.json
studio/frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
studio/frontend/contexts/: AuthContext.tsx
studio/frontend/hooks/: useProjects.ts  useThreats.ts  useUserThreats.ts
studio/frontend/lib/: threat-intel.ts
test_app/: QUICK_FIX.md  TROUBLESHOOTING.md  check_redis.sh  check_threats_in_db.py  create_project.py  debug_api_key.py  main.py  main_enhanced.py  test_ban.py  test_blocking.py  test_guardflow.py  test_telemetry_direct.py
(+32 files in other folders)
